--- a/.env
+++ b/.env
@@ -6,10 +6,12 @@ OPENSEARCH_URL=http://localhost:9200
 
 # Object Store (MinIO)
 S3_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=minioadmin
-S3_SECRET_KEY=minioadmin
+S3_ACCESS_KEY=admin
+S3_SECRET_KEY=password
 S3_BUCKET=contracts
 S3_REGION=us-east-1
+
+
 
 # NATS
 NATS_URL=nats://localhost:4222
