Fix Dockerfile requirements path and enhance PDF sanitization logic in security-gate service

--- a/services/security-gate/Dockerfile
+++ b/services/security-gate/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends libmagic1 && rm
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir -r requirements.txt.txt && \
     pip install --no-cache-dir --only-binary=:all: pikepdf
 
 COPY . .
