--- a/services/mock-pipeline/Dockerfile
+++ b/services/mock-pipeline/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12-slim
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir -r requirements.txt.txt
 COPY . .
 EXPOSE 9000
 CMD ["uvicorn","app:app","--host","0.0.0.0","--port","9000"]
